--- a/project/SPTarkov.Launcher/Components/PasswordFieldComponent.razor
+++ b/project/SPTarkov.Launcher/Components/PasswordFieldComponent.razor
@@ -5,7 +5,7 @@
 
 @code {
     private string _password = "";
-
+#pragma warning disable BL0007
     [Parameter]
     public string Password
     {
@@ -22,14 +22,11 @@
         }
     }
 
-    [Parameter]
-    public EventCallback<string> PasswordChanged { get; set; }
+    [Parameter] public EventCallback<string> PasswordChanged { get; set; }
 
-    [Parameter]
-    public bool IsRequired { get; set; }
+    [Parameter] public bool IsRequired { get; set; }
 
-    [Parameter]
-    public string Title { get; set; } = "Password";
+    [Parameter] public string Title { get; set; } = "Password";
 
     private bool _isShow;
     private InputType _passwordInput = InputType.Password;
