--- a/project/SPTarkov.Launcher/Components/Profiles/Profile/ProfileStatsSubColComponent.razor
+++ b/project/SPTarkov.Launcher/Components/Profiles/Profile/ProfileStatsSubColComponent.razor
@@ -1,9 +1,9 @@
 ﻿<div class="d-flex flex-column justify-space-between align-center">
     <MudText Class="mb-n2 no-pointers no-select" Typo="Typo.caption">@P1:</MudText>
-    <MudText Typo="Typo.h6">@P1value</MudText>
+    <MudText Typo="Typo.h6">@P1Value</MudText>
     <MudDivider DividerType="DividerType.Middle"/>
     <MudText Class="mb-n2 no-pointers no-select" Typo="Typo.caption">@P2:</MudText>
-    <MudText Typo="Typo.h6">@P2value</MudText>
+    <MudText Typo="Typo.h6">@P2Value</MudText>
 </div>
 
 @code
@@ -12,11 +12,11 @@
     public string P1 { get; set; }
 
     [Parameter]
-    public string P1value { get; set; }
+    public string P1Value { get; set; }
 
     [Parameter]
     public string P2 { get; set; }
 
     [Parameter]
-    public string P2value { get; set; }
+    public string P2Value { get; set; }
 }
