--- a/project/SPTarkov.Launcher/Components/Settings/AdvancedPanelComponent.razor
+++ b/project/SPTarkov.Launcher/Components/Settings/AdvancedPanelComponent.razor
@@ -5,28 +5,30 @@
 <MudItem sm="12">
     <MudPaper Class="pa-5 ml-1 gap-2 d-flex flex-column setting-on-hover-container mud-background-gray border-2 border-solid mud-border-lines-default" Elevation="3">
         <MudTooltip Color="Color.Dark" Arrow="true" Placement="Placement.Bottom" Text="Image cannot be changed for now">
-            <SettingSwitchComponent Switch="@showBackgroundSwitch" OptionName="@(LocaleHelper.Get("setting_option_background"))" SwitchFunc="@SetBackgroundUsage"/>
+            <SettingSwitchComponent Switch="@ShowBackgroundSwitch" OptionName="@(LocaleHelper.Get("setting_option_background"))" SwitchFunc="SetBackgroundUsage"/>
         </MudTooltip>
-        <SettingLocaleComponent Options="@_localeOptions" OptionName="@(LocaleHelper.Get("setting_option_language"))"/>
+        <SettingLocaleComponent Options="@LocaleOptions" OptionName="@(LocaleHelper.Get("setting_option_language"))"/>
     </MudPaper>
 </MudItem>
 
 @code
 {
-    private bool showBackgroundSwitch { get; set; }
-    private Dictionary<string, string> _localeOptions { get; set; }
+    private bool ShowBackgroundSwitch { get; set; }
+    private Dictionary<string, string> LocaleOptions { get; set; }
 
     protected override void OnInitialized()
     {
-        showBackgroundSwitch = ConfigHelper.GetConfig().UseBackground;
-        _localeOptions = LocaleHelper.GetAvailableLocales();
+        ShowBackgroundSwitch = ConfigHelper.GetConfig().UseBackground;
+        LocaleOptions = LocaleHelper.GetAvailableLocales();
         base.OnInitialized();
     }
 
-    private async Task SetBackgroundUsage()
+    private Task SetBackgroundUsage()
     {
-        showBackgroundSwitch = !showBackgroundSwitch;
-        ConfigHelper.SetUseBackground(showBackgroundSwitch);
+        ShowBackgroundSwitch = !ShowBackgroundSwitch;
+        ConfigHelper.SetUseBackground(ShowBackgroundSwitch);
         StateHelper.SetBackground();
+
+        return Task.CompletedTask;
     }
 }
