--- a/project/SPTarkov.Launcher/Dialogs/Profile/ProfileAddDialog.razor
+++ b/project/SPTarkov.Launcher/Dialogs/Profile/ProfileAddDialog.razor
@@ -1,4 +1,7 @@
-﻿@inject ISnackbar Snackbar
+﻿@using SPTarkov.Core.Models.Requests
+@using SPTarkov.Core.Models.Responses
+@using SPTarkov.Core.Models.Spt
+@inject ISnackbar Snackbar
 @inject StateHelper StateHelper
 @inject HttpHelper HttpHelper
 @inject LocaleHelper LocaleHelper
@@ -15,18 +18,18 @@
             }
             else
             {
-                <MudForm Model="_request" @bind-IsValid="@_success" Class="gap-2 mt-3">
-                    <MudSelect @bind-Value="_request.Edition" Variant="Variant.Outlined" Label="@(LocaleHelper.Get("profile_add_edition"))" Margin="Margin.Dense" Dense="true" Required="true">
-                        @foreach (var edition in serverEditions)
+                <MudForm Model="Request" @bind-IsValid="@_success" Class="gap-2 mt-3">
+                    <MudSelect @bind-Value="Request.Edition" Variant="Variant.Outlined" Label="@(LocaleHelper.Get("profile_add_edition"))" Margin="Margin.Dense" Dense="true" Required="true">
+                        @foreach (var edition in ServerEditions)
                         {
                             <MudSelectItem Value="@edition"/>
                         }
                     </MudSelect>
-                    <MudTextField Immediate="true" @bind-Value="_request.Username" Label="@(LocaleHelper.Get("profile_add_name"))" Variant="Variant.Outlined" Margin="Margin.Dense" Required="true"/>
-                    @if (tooltipText != "")
+                    <MudTextField Immediate="true" @bind-Value="Request.Username" Label="@(LocaleHelper.Get("profile_add_name"))" Variant="Variant.Outlined" Margin="Margin.Dense" Required="true"/>
+                    @if (TooltipText != "")
                     {
                         <MudCard Class="pa-2 edition-text" Outlined="true">
-                            <MudText>@tooltipText</MudText>
+                            <MudText>@TooltipText</MudText>
                         </MudCard>
                     }
                 </MudForm>
@@ -41,20 +44,20 @@
 
 @code {
     [CascadingParameter]
-    private IMudDialogInstance mudDialog { get; set; }
+    private IMudDialogInstance MudDialog { get; set; }
 
     private bool _success;
     private bool _requestInProgress;
     private string _taskText = "";
-    public RegisterRequest _request = new();
-    private List<string> serverEditions { get; set; }
-    private CancellationTokenSource token { get; set; }
-    private bool userCancel { get; set; }
-    private string tooltipText => StateHelper.ProfileTypes.GetValueOrDefault(_request.Edition, "");
+    public RegisterRequest Request = new();
+    private List<string> ServerEditions { get; set; }
+    private CancellationTokenSource Token { get; set; }
+    private bool UserCancel { get; set; }
+    private string TooltipText => StateHelper.ProfileTypes.GetValueOrDefault(Request.Edition, "");
 
     protected override void OnInitialized()
     {
-        serverEditions = StateHelper.ProfileTypes.Keys.ToList();
+        ServerEditions = StateHelper.ProfileTypes.Keys.ToList();
         base.OnInitialized();
     }
 
@@ -66,17 +69,17 @@
         {
             result = await CallServer(LocaleHelper.Get("profile_add_task_1"), LocaleHelper.Get("profile_add_task_fail"));
         }
-        catch (TaskCanceledException e) when (token.IsCancellationRequested)
+        catch (TaskCanceledException) when (Token.IsCancellationRequested)
         {
             AbortOrFail(LocaleHelper.Get("request_timed_out"));
             return;
         }
-        catch (HttpRequestException e)
+        catch (HttpRequestException)
         {
             AbortOrFail();
             return;
         }
-        catch (Exception e)
+        catch (Exception)
         {
             AbortOrFail();
             return;
@@ -93,12 +96,12 @@
     {
         try
         {
-            token = new CancellationTokenSource(TimeSpan.FromSeconds(10));
+            Token = new CancellationTokenSource(TimeSpan.FromSeconds(10));
             _taskText = taskText;
             StateHasChanged();
             await Task.Delay(20);
 
-            var returnResult = await HttpHelper.GameServerPut<RegisterResponse>(RequestUrl.Register, _request, token.Token);
+            var returnResult = await HttpHelper.GameServerPut<RegisterResponse>(RequestUrl.Register, Request, Token.Token);
             StateHelper.ProfileList = returnResult.Profiles;
             var result = returnResult.Response;
 
@@ -108,10 +111,10 @@
                 return false;
             }
 
-            token?.Dispose();
+            Token?.Dispose();
             return true;
         }
-        catch (Exception e)
+        catch (Exception)
         {
             AbortOrFail();
             return false;
@@ -120,30 +123,30 @@
 
     private void Submit()
     {
-        Snackbar.Add($"{LocaleHelper.Get("profile_add_task_success")}: {_request?.Username}!", Severity.Success);
-        mudDialog.Close(DialogResult.Ok(true));
+        Snackbar.Add($"{LocaleHelper.Get("profile_add_task_success")}: {Request?.Username}!", Severity.Success);
+        MudDialog.Close(DialogResult.Ok(true));
     }
 
-    private void AbortOrFail(string? message = null)
+    private void AbortOrFail(string message = null)
     {
         message ??= LocaleHelper.Get("profile_add_task_default");
 
-        if (!userCancel)
+        if (!UserCancel)
         {
             Snackbar.Add(message, Severity.Error);
         }
 
-        token?.Cancel();
-        mudDialog.Cancel();
+        Token?.Cancel();
+        MudDialog.Cancel();
         _requestInProgress = false;
     }
 
     private void UserCancelled()
     {
-        userCancel = true;
+        UserCancel = true;
         _requestInProgress = false;
-        token?.Cancel();
-        mudDialog.Cancel();
+        Token?.Cancel();
+        MudDialog.Cancel();
     }
 
 }
