--- a/project/SPTarkov.Launcher/Dialogs/Server/ServerAddDialog.razor
+++ b/project/SPTarkov.Launcher/Dialogs/Server/ServerAddDialog.razor
@@ -1,15 +1,16 @@
-﻿@inject ISnackbar Snackbar
+﻿@using SPTarkov.Core.Models.App
+@inject ISnackbar Snackbar
 @inject LocaleHelper LocaleHelper
 
 <MudDialog Class="mud-background-gray border-2 border-solid mud-border-lines-default">
     <DialogContent>
         <MudContainer Class="py-4">
-            <MudForm Model="Server" @bind-IsValid="@success" Class="gap-2 mt-3">
+            <MudForm Model="Server" @bind-IsValid="@_success" Class="gap-2 mt-3">
                 <MudTextField Immediate="true" @bind-Value="Server.Name" Label="@(LocaleHelper.Get("server_add_name"))" Variant="Variant.Outlined" Margin="Margin.Dense"/>
                 <MudTextField Immediate="true" @bind-Value="Server.IpAddress" Label="@(LocaleHelper.Get("server_add_address"))" Required="true" RequiredError="@(LocaleHelper.Get("server_add_required"))" Variant="Variant.Outlined" Margin="Margin.Dense"/>
             </MudForm>
             <MudContainer Class="mt-3 d-flex justify-end pa-0 gap-2">
-                <MudButton Class="mud-button-border-copy border-2 border-solid mud-button-inner-text-copy ml-auto" Variant="Variant.Filled" Color="Color.Primary" Disabled="@(!success)" OnClick="Submit">@(LocaleHelper.Get("server_add_confirm"))</MudButton>
+                <MudButton Class="mud-button-border-copy border-2 border-solid mud-button-inner-text-copy ml-auto" Variant="Variant.Filled" Color="Color.Primary" Disabled="@(!_success)" OnClick="Submit">@(LocaleHelper.Get("server_add_confirm"))</MudButton>
                 <MudButton Class="mud-button-border-copy border-2 border-solid mud-button-inner-text-copy" Variant="Variant.Filled" Color="Color.Default" OnClick="Cancel">@(LocaleHelper.Get("server_add_cancel"))</MudButton>
             </MudContainer>
         </MudContainer>
@@ -17,26 +18,26 @@
 </MudDialog>
 
 @code {
-    private bool success;
+    private bool _success;
 
     // TODO: create mask that can be either IP or an actual address - Example: https://127.0.0.1:6969 or https://nerd.something.net:6969
-    private readonly IMask ipPortMask = RegexMask.IPv4(true);
+    private readonly IMask _ipPortMask = RegexMask.IPv4(true);
 
     public Server Server = new();
 
-    [CascadingParameter] private IMudDialogInstance mudDialog { get; set; }
+    [CascadingParameter] private IMudDialogInstance MudDialog { get; set; }
 
     private void Submit()
     {
         Server.ServerId = DateTimeOffset.UtcNow.ToUnixTimeSeconds().ToString();
         Server.Locked = false;
         Snackbar.Add(LocaleHelper.Get("server_add_success"), Severity.Success);
-        mudDialog.Close(DialogResult.Ok(Server));
+        MudDialog.Close(DialogResult.Ok(Server));
     }
 
     private void Cancel()
     {
-        mudDialog.Cancel();
+        MudDialog.Cancel();
     }
 
 }
