--- a/project/SPTarkov.Launcher/Pages/ForgeMod.razor
+++ b/project/SPTarkov.Launcher/Pages/ForgeMod.razor
@@ -1,25 +1,26 @@
 ﻿@page "/ForgeMod/{ModId}"
+@using SPTarkov.Core.Models.Responses
 
 @inject HttpHelper HttpHelper
 @inject ILogger<ForgeMod> Logger
 
 <MudContainer Class="px-4 mt-2 mb-6" MaxWidth="MaxWidth.Large">
     <MudGrid>
-        @if (searchResponse is null || searchInProgress || versionResponse is null)
+        @if (SearchResponse is null || SearchInProgress || VersionResponse is null)
         {
             <DetailedModComponent IsSkeleton="true"/>
         }
-        else if (searchResponse?.Data is not null)
+        else if (SearchResponse?.Data is not null)
         {
-            <DetailedModComponent ForgeMod="@searchResponse?.Data" ForgeModVersion="@versionResponse?.Data.FirstOrDefault()"/>
+            <DetailedModComponent ForgeMod="@SearchResponse?.Data" ForgeModVersion="@VersionResponse?.Data?.FirstOrDefault()"/>
         }
     </MudGrid>
 </MudContainer>
 
 @code {
-    private ForgeModResponse searchResponse { get; set; }
-    private ForgeVersionResponse versionResponse { get; set; }
-    private bool searchInProgress { get; set; }
+    private ForgeModResponse SearchResponse { get; set; }
+    private ForgeVersionResponse VersionResponse { get; set; }
+    private bool SearchInProgress { get; set; }
 
     [Parameter]
     public string ModId { get; set; }
@@ -28,18 +29,18 @@
     {
         await base.OnInitializedAsync();
         await SearchForMod();
-        await SearchForModVersion(ModId, searchResponse.Data.Versions.FirstOrDefault().Id.ToString());
+        await SearchForModVersion(ModId, SearchResponse.Data.Versions.FirstOrDefault().Id.ToString());
 
     }
 
     private async Task SearchForMod()
     {
-        searchInProgress = true;
+        SearchInProgress = true;
 
         try
         {
             var token = new CancellationTokenSource(TimeSpan.FromSeconds(10));
-            searchResponse = await HttpHelper.ForgeGetMod(ModId, token.Token);
+            SearchResponse = await HttpHelper.ForgeGetMod(ModId, token.Token);
         }
         catch (Exception e)
         {
@@ -47,7 +48,7 @@
             return;
         }
 
-        searchInProgress = false;
+        SearchInProgress = false;
         StateHasChanged();
     }
 
@@ -56,7 +57,7 @@
         try
         {
             var token = new CancellationTokenSource(TimeSpan.FromSeconds(10));
-            versionResponse = await HttpHelper.ForgeGetModVersion(modId, versionId, token.Token);
+            VersionResponse = await HttpHelper.ForgeGetModVersion(modId, versionId, token.Token);
         }
         catch (Exception e)
         {
