--- a/project/SPTarkov.Launcher/wwwroot/app.css
+++ b/project/SPTarkov.Launcher/wwwroot/app.css
@@ -31,12 +31,11 @@ html body .mud-popover {
     backdrop-filter: blur(20px);
 }
 html body .mud-tooltip {
-    background-color: rgba(39, 39, 47, 0.5) !important;
+    background-color: rgba(39, 39, 47, 0.7) !important;
     backdrop-filter: blur(20px);
-}
-html body .mud-tooltip-arrow {
-    background-color: rgba(39, 39, 47, 0.9) !important;
-    backdrop-filter: blur(20px);
+    border-color: rgba(255, 255, 255, 0.118) !important;
+    border-width: 2px;
+    border-style: solid;
 }
 html body .mud-expansion-panels {
     background-color: rgba(39, 39, 47, 0) !important;
@@ -401,4 +400,8 @@ div.overlay-container {
 
 .mud-button-inner-text-copy {
     color: rgba(255, 255, 255, 0.698) !important;
+}
+
+.wipe-checkbox .mud-icon-button {
+    padding: 0;
 }
